[gd_scene load_steps=6 format=3 uid="uid://c0nydah1xrgoi"]

[ext_resource type="Script" uid="uid://c8sn13x5ast1q" path="res://ui/inventory/inventory_slot.gd" id="1_bmk5l"]
[ext_resource type="StyleBox" uid="uid://bl1cxbgmx01jl" path="res://assets/tiles/button inventory hover.tres" id="2_hct3i"]
[ext_resource type="StyleBox" uid="uid://dpyi3tekla651" path="res://assets/tiles/button inventory normal.tres" id="3_e2a1b"]
[ext_resource type="Texture2D" uid="uid://xh72hx23lud1" path="res://assets/textures/plants/thing_planted.png" id="3_xnhl7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_emphv"]

[node name="InventoryItem" type="AspectRatioContainer"]
custom_minimum_size = Vector2(17, 17)
offset_right = 17.0
offset_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_bmk5l")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_emphv")
theme_override_styles/hover = ExtResource("2_hct3i")
theme_override_styles/pressed = ExtResource("2_hct3i")
theme_override_styles/normal = ExtResource("3_e2a1b")

[node name="ItemContent" type="Control" parent="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.5
offset_top = -10.5
offset_right = 8.5
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ItemTexture" type="TextureRect" parent="Button/ItemContent"]
clip_contents = true
layout_mode = 2
offset_right = 17.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_xnhl7")
stretch_mode = 5

[node name="ItemPrice" type="Label" parent="Button/ItemContent"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -13.0
offset_right = 7.0
offset_bottom = 8.0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.441515, 0.91299, 0, 1)
theme_override_font_sizes/font_size = 19
text = "0"
vertical_alignment = 2

[node name="ItemCount" type="Label" parent="Button/ItemContent"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -13.0
offset_right = 1.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 19
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
